独立日志模块